@@ -8,6 +8,7 @@ innoextract 1.8 (WIP)
  - Added support for My Inno Setup Extensions installers older than 3.0.6.1
  - Added support for installers using an alternative setup loader magic
  - Added support for using boost_{zlib,bzip2} when statically linking Boost
+ - Added support for automatically reading external setup.0 files
  - Fixed extracting files from slices larger than 2 GiB with 32-bit builds
  - Fixed output path for files with absolute paths (canonicalization now strips all unsafe characters)
  - Fixed output directory being created even when not extracting files
